--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -16,7 +16,10 @@
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
-     <layout class="QHBoxLayout" name="horizontalLayout" stretch="8,2">
+     <layout class="QHBoxLayout" name="horizontalLayout" stretch="5,1">
+      <property name="spacing">
+       <number>6</number>
+      </property>
       <item>
        <widget class="QMdiArea" name="mdiArea"/>
       </item>
@@ -25,25 +28,15 @@
         <property name="title">
          <string>Control Panel</string>
         </property>
-        <layout class="QVBoxLayout" name="verticalLayout" stretch="8,0,2,0,2,0">
+        <layout class="QVBoxLayout" name="verticalLayout" stretch="8,2,0,0,0,0,0">
          <item>
           <widget class="QTextBrowser" name="MainTextBrowser"/>
          </item>
          <item>
-          <spacer name="verticalSpacer_2">
-           <property name="orientation">
-            <enum>Qt::Vertical</enum>
+          <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0,0,0">
+           <property name="spacing">
+            <number>6</number>
            </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>20</width>
-             <height>40</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="1,2,1">
            <item>
             <spacer name="horizontalSpacer">
              <property name="orientation">
@@ -51,7 +44,7 @@
              </property>
              <property name="sizeHint" stdset="0">
               <size>
-               <width>18</width>
+               <width>17</width>
                <height>20</height>
               </size>
              </property>
@@ -71,7 +64,7 @@
              </property>
              <property name="sizeHint" stdset="0">
               <size>
-               <width>18</width>
+               <width>17</width>
                <height>20</height>
               </size>
              </property>
@@ -87,13 +80,13 @@
            <property name="sizeHint" stdset="0">
             <size>
              <width>20</width>
-             <height>40</height>
+             <height>10</height>
             </size>
            </property>
           </spacer>
          </item>
          <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="1,2,1">
+          <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="0,0,0">
            <item>
             <spacer name="horizontalSpacer_3">
              <property name="orientation">
@@ -101,7 +94,7 @@
              </property>
              <property name="sizeHint" stdset="0">
               <size>
-               <width>18</width>
+               <width>17</width>
                <height>20</height>
               </size>
              </property>
@@ -130,6 +123,56 @@
           </layout>
          </item>
          <item>
+          <spacer name="verticalSpacer_2">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>10</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_4">
+           <item>
+            <spacer name="horizontalSpacer_5">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+           <item>
+            <widget class="QPushButton" name="freezeButton">
+             <property name="text">
+              <string>freeze</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <spacer name="horizontalSpacer_6">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+          </layout>
+         </item>
+         <item>
           <spacer name="verticalSpacer">
            <property name="orientation">
             <enum>Qt::Vertical</enum>
@@ -137,7 +180,7 @@
            <property name="sizeHint" stdset="0">
             <size>
              <width>20</width>
-             <height>40</height>
+             <height>10</height>
             </size>
            </property>
           </spacer>
@@ -155,7 +198,7 @@
      <x>0</x>
      <y>0</y>
      <width>698</width>
-     <height>23</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
